k8s/deployment-rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-rabbitmq
  labels:
    app: pod-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-rabbitmq
  template:
    metadata:
      labels:
        app: pod-rabbitmq
    spec:
      restartPolicy: Always
      containers:
      - name: pod-rabbitmq
        image: rabbitmq:3.12.8-alpine
        imagePullPolicy: Always
        readinessProbe:
          exec:
            command:
             - rabbitmq-diagnostics
             - -q
             - ping
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
          - containerPort: 5672 # Pod port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  selector:
    app: pod-rabbitmq
  type: ClusterIP # Internal IP address
  ports:
    - protocol: TCP
      port: 5672 # Service port
      targetPort: 5672 # Pod port
